feat: docs demo

--- a/docs/content/docs/index.mdx
+++ b/docs/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Hello World
-description: Your first document
+title: "简介"
+description: "介绍 live2d-motionsync 库"
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+## 什么是 live2d-motionsync
 
-## What is Next?
-<Editor title="test" file="test.jsx" />
+live2d-motionsync 是一个用于将 live2d 模型与动作同步的库。从而实现更加自然的口型动画效果,可以用于数字人、虚拟主播、游戏等场景。
+
