--- a/docs/content/docs/quick-start.mdx
+++ b/docs/content/docs/quick-start.mdx
@@ -6,5 +6,5 @@ description: Your first document
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ## What is Next?
-<Editor title="test" previewMode  file="test.tsx" />
-<Editor title="test"   file="centering-example.tsx" />
+<Editor title="test" previewMode  file="base" />
+
